--- a/Web/package.json
+++ b/Web/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^5.15.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
